@@ -2,25 +2,24 @@ package ru.dorofeev.sandbox.quartzworkflow.tests;
 
 import org.hamcrest.BaseMatcher;
 import org.hamcrest.Description;
+import rx.Observable;
+import rx.functions.Func1;
 
 import java.util.List;
-import java.util.function.Predicate;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 public class Matchers {
 
-	public static <T> org.hamcrest.Matcher<Stream<T>> hasOnlyOneItem() {
+	public static <T> org.hamcrest.Matcher<Observable<T>> hasOnlyOneItem() {
 		return hasOnlyOneItem(null, pd -> true);
 	}
 
-	public static <T> org.hamcrest.Matcher<Stream<T>> hasOnlyOneItem(String descr, Predicate<T> predicate) {
-		return new BaseMatcher<Stream<T>>() {
+	public static <T> org.hamcrest.Matcher<Observable<T>> hasOnlyOneItem(String descr, Func1<? super T, Boolean> predicate) {
+		return new BaseMatcher<Observable<T>>() {
 			@Override
 			public boolean matches(Object item) {
 				//noinspection unchecked
-				Stream<T> stream = (Stream<T>) item;
-				List<T> list = stream.filter(predicate).collect(Collectors.toList());
+				Observable<T> observable = (Observable<T>) item;
+				List<T> list = observable.filter(predicate).toList().toBlocking().single();
 				return list.size() == 1;
 			}
 
